# pkg/models/file.go
@@ -4,7 +4,7 @@ import "time"
 
 type File struct {
 	ID        uint      `json:"id" gorm:"type:integer;primary_key;autoIncrement:true"`
-	Name      string    `json:"name"`
+	Name      string    `json:"name" gorm:"uniqueIndex"`
 	Location  string    `json:"location"`
 	Processed bool      `json:"processed"`
 	Output    string    `json:"output"`
@@ -13,5 +13,9 @@ type File struct {
 }
 
 type UploadFile struct {
+	Name string `json:"name" binding:"required"`
+}
+
+type ProcessFile struct {
 	Name string `json:"name" binding:"required"`
 }
